fixes overflow bug

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -104,7 +104,7 @@ nav {
 	left: 0px;
 	top: 0px;
 	width: 100%;
-	height: 500px;
+	height: 100%;
 	opacity: 0;
 	z-index: 1;
 	overflow-y: scroll;
@@ -113,7 +113,6 @@ nav {
 	-moz-transition: opacity 1s;
 	-o-transition: opacity 1s;
 	transition: opacity 1s;
-	position: relative;
 
 	.image-container {
 		height: 500px;
